--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #0c0122;
+    background-color: #0db7ce;
     margin: 0;
     padding: 0;
 }
@@ -24,7 +24,7 @@ main {
 
 .hero h1 {
     font-size: 32px;
-    color: #f6f4f4;
+    color: #0c0808;
 }
 
 .hero p {
@@ -44,34 +44,22 @@ main {
 }
 
 .app-description {
-    background-color: #f5f5f5; 
     padding: 20px;
     border-radius: 5px;
     margin-top: 20px;
+    font-weight: bold;
+    
 }
 
 .app-description h2 {
     font-size: 24px; 
-    color: #333; 
+    color: #0c0808; 
 }
 
 .app-description p {
     font-size: 19,2px; 
-    color: #555; 
+    color: white; 
 
-}
-
-.app-description ul {
-    list-style-type: disc; 
-    margin-left: 20px;
-}
-
-.app-description li {
-    font-size: 19,2px; 
-    color: #555; 
-    margin-bottom: 10px; 
-   font-style: italic;
-   font-weight:bold;
 }
 
 footer {
