--- a/css/signup.css
+++ b/css/signup.css
@@ -1,3 +1,17 @@
+#header {
+   background-color: #0db7ce;
+   height: 100hv;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.header img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-left: 10px;
+}
 
 
 form {
