--- a/signup.css
+++ b/signup.css
@@ -29,6 +29,16 @@ label {
     margin-bottom: 5px;
 }
 
+input[type="username/phonenumber"],
+input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
 input[type="text"],
 input[type="email"],
 input[type="password"] {
